switch button language

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<!-- Start Navigation -->
 					<nav id="navigation">
 						<ul>
-							<li><a href="mailto:info@patience.io" title="Notify Me" class="button button-main">Contact us</a></li>
+							<li><a href="mailto:info@patience.io" title="Notify Me" class="button button-main">Kontakt</a></li>
 						</ul>
 					</nav>
 					<!-- End Navigation -->
