remove login link and fix colors

--- a/index.html
+++ b/index.html
@@ -62,14 +62,10 @@
 					<!-- Start Navigation -->
 					<nav id="navigation">
 						<ul>
-							<li><a href="mailto:info@patience.io" title="Notify Me" class="button button-main">Kontakt</a></li>
+							<li><a href="mailto:info@patience.io" title="Notify Me" class="button button-main">Contact us</a></li>
 						</ul>
 					</nav>
 					<!-- End Navigation -->
-
-					<p class="sub-text">
-						Für bestehende Nutzer von Patience.io:<br /><a href="http://www.patience.io/login">Hier geht es zum Admin-Login</a>
-					</p>
 				</div>
 			</div>
 		</section>
